--- a/.github/workflows/ci-sonar-mantis.yml
+++ b/.github/workflows/ci-sonar-mantis.yml
@@ -20,6 +20,15 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
+      - name: Instalar SonarScanner
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y unzip openjdk-17-jre
+          wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip
+          unzip sonar-scanner-cli-5.0.1.3006-linux.zip
+          sudo mv sonar-scanner-5.0.1.3006-linux /opt/sonar-scanner
+          echo "/opt/sonar-scanner/bin" >> $GITHUB_PATH
+
       - name: Executar SonarScanner
         run: |
           sonar-scanner \
